# CVGUI2.0

./: CMakeLists.txt  icons.qrc  log.cpp  log.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  utility.h
operator/: custdata.h  custdatatype.h  operator.cpp  operator.h
scene/: commongraphicsblock.cpp  commongraphicsblock.h  dataview.cpp  dataview.h  imagedisplayer.cpp  imagedisplayer.h  linepath.cpp  linepath.h  operatorscene.cpp  operatorscene.h  operatorselector.cpp  operatorselector.h  operatorview.cpp  operatorview.h  opgraphicsblock.cpp  opgraphicsblock.h  resultview.cpp  resultview.h  sceneproject.cpp  sceneproject.h  utility.h
